fix height of tech items on mobile and benefits items on desktop

--- a/themes/terra/sass/_aquaponics-page.scss
+++ b/themes/terra/sass/_aquaponics-page.scss
@@ -301,6 +301,7 @@
   .benefit-container {
     margin-top: 24px;
     width: 90%;
+    min-height: 400px;
     padding: 20px;
     border-radius: 8px;
     background-color: #ffffff;
@@ -346,7 +347,7 @@
     margin: 30px auto;
     align-content: space-between;
     justify-content: center;
-    height: 410px;
+    height: 425px;
     width: 336px;
     background-color: #ffffff;
     box-shadow: 0 14px 30px 10px rgba(0, 0, 0, 0.15);
@@ -388,6 +389,10 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 30px;
+
+    @include desktop {
+      padding-bottom: 30px;
+    }
   }
   .cur-tech-img {
     width: 100%;
